# cv_exercises

computer-vision-1-task1b-01531697/: Readme.md  momo.sh
computer-vision-1-task1b-01531697/src/cv/: CMakeLists.txt
computer-vision-1-task1b-01531697/src/cv/task1b/: CMakeLists.txt  algorithms.cpp  algorithms.h  config.json  main.cpp  test_all_x64.sh
computer-vision-1-task1b-01531697/src/cv/task1b/data/coins1/: config.json
computer-vision-1-task1b-01531697/src/cv/task1b/data/coins3/: config.json
computer-vision-1-task1b-01531697/src/cv/task1b/data/coins_test_3/: config.json
computer-vision-2-task2-01531697/: Readme.md
computer-vision-2-task2-01531697/src/: CMakeLists.txt
computer-vision-2-task2-01531697/src/cv/task2/: .gitignore  CMakeLists.txt  cards_bonus.json  diff2_halloween.json  diff4_dragon_bonus.json  main.cpp  test_all_x64.sh
